syntax = "proto3";
package poktroll.gateway;

option go_package = "github.com/pokt-network/poktroll/x/gateway/types";
option (gogoproto.stable_marshaler_all) = true;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

// GatewayStaked is emitted when a gateway is staked or up-staked.
message EventGatewayStaked {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"]; // The Bech32 address of the gateway.
}

// GatewayUnstaked defines the event emitted when a gateway has been unstaked.
message EventGatewayUnstaked {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"]; // The Bech32 address of the gateway the application has changed their delegation of.
}
